Clarify the purpose of this repo
Signed-off-by: Jim Crossley <jim@crossleys.org>

--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,10 @@
 # Open Policy Agent policy rules
 
-This repository contains OPA policy rules.
+This repository is a library of common OPA policy rules. The rules may
+be compiled into a WASM module, enabling any WASM-compatible
+application,
+e.g. https://github.com/seedwing-io/opa-client[opa-client] to embed a
+"policy engine".
 
 ## Installing OPA
 
